--- a/styles/matrix.scss
+++ b/styles/matrix.scss
@@ -1,10 +1,11 @@
 #matrix {
-    background-color: #181818;
-    border-style: solid;
-    border-color: rgba(80, 80, 255, 0.1);
-    border-width: 3;
-    margin: auto;
+    margin: 1em;
+    height: auto;
     width: 80%;
+    background-color: rgba(50, 50, 50, 0.5);
+    border-color: rgba(0, 0, 255, 0.5);
+    border-width: 3px;
+    border-style: solid;
 }
 
 .size {
@@ -23,23 +24,13 @@
     font-family: "Source Code Pro", "monospace";
     width: 100%;
     height: max-content;
-    font-size: 2.5em;
+    font-size: 2.25em;
     line-height: 0.8em;
-    word-spacing: 0px;
-    letter-spacing: 0em;
     color: rgb(40, 40, 40);
     transition: color 0.1s;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.frame {
-    border-style: solid;
-    border-color: rgb(80, 80, 255);
-    border-width: 3;
-    width: max-content;
-    margin: auto;
 }
 
 @media screen and (max-width: 850px) {
