--- a/styles/matrix.scss
+++ b/styles/matrix.scss
@@ -1,5 +1,6 @@
 #matrix {
-    margin: 1em;
+    margin: auto;
+    padding: 0.5rem;
     height: auto;
     width: 80%;
     background-color: rgba(50, 50, 50, 0.5);
@@ -24,7 +25,7 @@
     font-family: "Source Code Pro", "monospace";
     width: 100%;
     height: max-content;
-    font-size: 2.25em;
+    font-size: 2.35em;
     line-height: 0.8em;
     color: rgb(40, 40, 40);
     transition: color 0.1s;
@@ -35,6 +36,6 @@
 
 @media screen and (max-width: 850px) {
     .block {
-        font-size: 2em;
+        font-size: 1.75em;
     }
 }
