--- a/styles/styles.css
+++ b/styles/styles.css
@@ -321,30 +321,25 @@ body ul {
   color: white;
 }
 
-.list {
-  margin-left: 2rem;
-  margin-right: 1rem;
-  font-size: 2.5em;
-  color: lightslategrey;
-}
-
-.list li {
-  padding: 0.5em;
-  border-radius: 10px;
-}
-
-.list li:hover {
-  cursor: pointer;
-  color: black;
-  background-color: yellow;
-}
-
-.list li:active {
-  cursor: pointer;
-  color: black;
-  background-color: yellow;
-}
-
+/* .list {
+    margin-left: 2rem;
+    margin-right: 1rem;
+    font-size: 2.5em; // 1rem;
+    color: lightslategrey;
+    li {
+        border-radius: 10px;
+    }
+    li:hover {
+        cursor: pointer;
+        color: black;
+        background-color: yellow;
+    }
+    li:active {
+        cursor: pointer;
+        color: black;
+        background-color: yellow;
+    }
+}*/
 /*.animated-image-about {
     //border-color: blueviolet;
     //border-style: solid;
@@ -422,11 +417,6 @@ body ul {
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 0;
-    font-size: 2em;
-  }
-  .list {
-    margin-left: 1rem;
-    margin-right: 1rem;
     font-size: 2em;
   }
 }
@@ -549,11 +539,6 @@ body ul {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     margin-top: 0;
-    font-size: 1.5em;
-  }
-  .list {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
     font-size: 1.5em;
   }
   #ID {
