--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -237,21 +237,18 @@ body {
     span {
         color: yellow;
     }
-}
-
-.about-tag-line {
     span:hover {
         color: white;
     }
 }
 
-.list {
+
+/* .list {
     margin-left: 2rem;
     margin-right: 1rem;
     font-size: 2.5em; // 1rem;
     color: lightslategrey;
     li {
-        padding: 0.5em;
         border-radius: 10px;
     }
     li:hover {
@@ -264,7 +261,7 @@ body {
         color: black;
         background-color: yellow;
     }
-}
+}*/
 
 
 /*.animated-image-about {
@@ -343,11 +340,6 @@ body {
         margin-left: 1rem;
         margin-right: 1rem;
         margin-top: 0;
-        font-size: 2em;
-    }
-    .list {
-        margin-left: 1rem;
-        margin-right: 1rem;
         font-size: 2em;
     }
 }
@@ -435,11 +427,6 @@ body {
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         margin-top: 0;
-        font-size: 1.5em;
-    }
-    .list {
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
         font-size: 1.5em;
     }
     #ID {
