--- a/styles/matrix.css
+++ b/styles/matrix.css
@@ -46,6 +46,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-transition: all 1s;
+  transition: all 1s;
 }
 
 @media screen and (max-width: 850px) {
