--- a/styles/matrix.scss
+++ b/styles/matrix.scss
@@ -32,6 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 1s;
 }
 
 @media screen and (max-width: 850px) {
