--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -119,7 +119,7 @@ body {
     max-width: 1500px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: min-content;
-    grid-template-areas: "title title""carousel carousel""about-heading about-heading""tag-line about-image""about-list about-image""contact-heading contact-heading""contact-content contact-content""footer footer";
+    grid-template-areas: "title title""carousel carousel""about-heading about-heading""tag-line about-image""about-list about-image""download-heading download-heading""android ios""contact-heading contact-heading""contact-content contact-content""footer footer";
     .title-heading {
         grid-area: title;
     }
@@ -143,6 +143,15 @@ body {
     }
     .contact-content {
         grid-area: contact-content;
+    }
+    .download-heading {
+        grid-area: download=heading;
+    }
+    .android {
+        grid-area: android;
+    }
+    .ios {
+        grid-area: ios;
     }
     .footer {
         grid-area: footer;
@@ -211,7 +220,8 @@ body {
 
 // About section
 .about-heading,
-.contact-heading {
+.contact-heading,
+.download-heading {
     height: auto;
     display: flex;
     margin-left: 2rem;
@@ -220,7 +230,9 @@ body {
     padding-top: 3rem;
     align-items: center;
     .about-text,
-    .contact-text {
+    .contact-text,
+    .download-text {
+        width: 100%;
         font-size: 5rem;
         color: white;
         text-shadow: 3px 3px var(--primary-color);
@@ -241,48 +253,6 @@ body {
         color: white;
     }
 }
-
-
-/* .list {
-    margin-left: 2rem;
-    margin-right: 1rem;
-    font-size: 2.5em; // 1rem;
-    color: lightslategrey;
-    li {
-        border-radius: 10px;
-    }
-    li:hover {
-        cursor: pointer;
-        color: black;
-        background-color: yellow;
-    }
-    li:active {
-        cursor: pointer;
-        color: black;
-        background-color: yellow;
-    }
-}*/
-
-
-/*.animated-image-about {
-    //border-color: blueviolet;
-    //border-style: solid;
-    //border-width: 6px;
-    //border-radius: 25px;
-    margin: 1em 1em 1em 1em;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    p {
-        font-size: 4em;
-        line-height: 0.7em;
-        margin: 0;
-        background-color: teal;
-        font-family: 'Source Code Pro';
-        overflow: hidden;
-    }
-}*/
 
 .contact-content {
     color: lightslategrey;
@@ -309,6 +279,53 @@ body {
     font-size: 3em;
 }
 
+.android,
+.ios {
+    margin: auto;
+    margin-top: 1rem;
+    width: 60%;
+    padding-top: 60%;
+    position: relative;
+    background-color: rgb(20, 20, 20);
+    box-shadow: 5px 5px rgb(40, 40, 40);
+    cursor: pointer;
+    border-radius: 25px;
+    display: block;
+}
+
+.ios:hover,
+.android:hover {
+    background-color: yellow;
+}
+
+.croppng {
+    position: absolute;
+    top: 15%;
+    right: 16%;
+    height: 70%;
+    width: 62%;
+    margin: auto;
+    overflow: hidden;
+}
+
+.androidImg {
+    height: 100%;
+    position: absolute;
+    right: -135%;
+}
+
+.iosImg {
+    height: 100%;
+    position: absolute;
+    right: 6%;
+}
+
+//.ios {
+//    margin: auto;
+//    width: 80%;
+//    background: mediumseagreen;
+//    overflow: hidden;
+//}
 .footer {
     font-size: 1.2em;
     text-align: center;
@@ -321,12 +338,14 @@ body {
         height: 5em;
     }
     .about-heading,
-    .contact-heading {
+    .contact-heading,
+    .download-heading {
         margin-left: 1rem;
         margin-right: 1rem;
         margin-top: 4rem;
         .about-text,
-        .contact-text {
+        .contact-text,
+        .download-text {
             font-size: 3.5rem;
         }
     }
@@ -378,7 +397,7 @@ body {
     .grid {
         grid-template-columns: 1fr;
         grid-template-rows: min-content;
-        grid-template-areas: "title""carousel""about-heading""tag-line""about-list""about-image""contact-heading""contact-content""footer";
+        grid-template-areas: "title""carousel""about-heading""tag-line""about-list""about-image""download-heading""android""ios""contact-heading""contact-content""footer";
         .title-heading {
             grid-area: title;
         }
@@ -403,17 +422,28 @@ body {
         .contact-content {
             grid-area: contact-content;
         }
+        .download-heading {
+            grid-area: download-heading;
+        }
+        .android {
+            grid-area: android;
+        }
+        .ios {
+            grid-area: ios;
+        }
         .footer {
             grid-area: footer;
         }
     }
     .about-heading,
-    .contact-heading {
+    .contact-heading,
+    .download-heading {
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         margin-top: 3rem;
         .about-text,
-        .contact-text {
+        .contact-text,
+        .download-text {
             font-size: 3rem;
         }
     }
