--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -293,6 +293,10 @@ body {
     display: block;
 }
 
+.ios {
+    cursor: not-allowed;
+}
+
 .ios:hover,
 .android:hover {
     background-color: yellow;
@@ -308,13 +312,14 @@ body {
     overflow: hidden;
 }
 
-.androidImg {
+.iosImg {
+    cursor: not-allowed;
     height: 100%;
     position: absolute;
     right: -135%;
 }
 
-.iosImg {
+.androidImg {
     height: 100%;
     position: absolute;
     right: 6%;
