--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -90,6 +90,11 @@ body {
     list-style: none;
 }
 
+#contact-button {
+    border-radius: 10px;
+    background-color: blue;
+}
+
 .navbar-links ul {
     margin: 0;
     padding: 0;
@@ -105,7 +110,14 @@ body {
 }
 
 .navbar-links li:hover {
+    border-radius: 10px;
     background-color: #555;
+}
+
+#contact-button:hover {
+    border-radius: 10px;
+    background-color: white;
+    color: blue;
 }
 
 // Main content
@@ -232,6 +244,7 @@ body {
     .about-text,
     .contact-text,
     .download-text {
+        align-items: center;
         width: 100%;
         font-size: 5rem;
         color: white;
@@ -254,12 +267,42 @@ body {
     }
 }
 
-.contact-content {
-    color: lightslategrey;
+.button-container {
+    width: max-content;
+    text-align: left;
+}
+
+.information {
     margin-left: 2rem;
-    margin-right: 1rem;
-    margin-top: 0;
-    font-size: 2.5em;
+    font-size: 1rem;
+    color: slategrey
+}
+
+.contact-content button {
+    cursor: pointer;
+    width: 100%;
+    display: flex;
+    background-color: transparent;
+    color: lightslategrey;
+    padding: 0;
+    margin-top: 2rem;
+    margin-left: 2rem;
+    border: none;
+    border: 2px solid transparent;
+    transition: 0.5s all;
+}
+
+.contact-content button:hover {
+    border-radius: 10px;
+    border: 2px solid yellow;
+}
+
+.contact-content button p {
+    padding: 0.5rem;
+    padding-left: 0;
+    margin: 0;
+    font-size: 2rem;
+    border: none;
 }
 
 .button {
@@ -325,16 +368,12 @@ body {
     right: 6%;
 }
 
-//.ios {
-//    margin: auto;
-//    width: 80%;
-//    background: mediumseagreen;
-//    overflow: hidden;
-//}
 .footer {
     font-size: 1.2em;
     text-align: center;
-    margin: 2em;
+    margin-top: 2em;
+    padding: 3rem;
+    background-color: rgb(30, 30, 30);
 }
 
 @media screen and (max-width: 900px) {
@@ -360,11 +399,17 @@ body {
         margin-top: 0;
         font-size: 2em;
     }
-    .contact-content {
+    .information {
+        margin-left: 1.5rem;
+    }
+    .contact-content button {
+        margin: 0.25rem;
         margin-left: 1rem;
-        margin-right: 1rem;
-        margin-top: 0;
-        font-size: 2em;
+        margin-top: 1.5rem;
+    }
+    .contact-content button p {
+        padding: 0.25rem;
+        font-size: 1.5rem;
     }
 }
 
@@ -458,11 +503,16 @@ body {
         margin-top: 0;
         font-size: 1.5em;
     }
-    .contact-content {
+    .information {
         margin-left: 0.5rem;
-        margin-right: 0.5rem;
-        margin-top: 0;
-        font-size: 1.5em;
+    }
+    .contact-content button {
+        margin: 0.25rem;
+        margin-top: 1rem;
+    }
+    .contact-content button p {
+        padding: 0.25rem;
+        font-size: 1rem;
     }
     #ID {
         font-size: 1.5em;
